[package]
name = "rustydump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "rustdump"
path = "src/rust/main.rs"


[dependencies]
winapi = { version = "0.3.9", features = ["debug", "winuser", "tlhelp32", "handleapi", "errhandlingapi", "processthreadsapi"] }
